--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@line/bot-sdk": "^6.8.4",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "request": "^2.88.2",
     "xmljson": "^0.2.0"
